# fgmetric

./: .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  publish.yml  python_package.yml
agent_notes/chat_logs/: expert-review-fgmetric-2026-02-17.md
agent_notes/issues/: README.md  issues_2026-02-17_fgmetric_review.md
agent_notes/reviews/: README.md  review_2026-02-17_fgmetric.md
benchmarks/: conftest.py
benchmarks/data/: demo.1e4.tsv
docs/: benchmarks.md  guide.md  index.md
docs/api/: metric.md  metric_writer.md
fgmetric/: __init__.py  _collections.py  _typing_extensions.py  collections.py  main.py  metric.py  metric_writer.py
fgmetric/collections/: __init__.py  _counter_pivot_table.py  _delimited_list.py
tests/: test_collections.py  test_main.py  test_metric.py  test_metric_writer.py  test_typing_extensions.py
tests/benchmarks/: conftest.py  test_benchmark_runtime.py
